# api-docs.json
@@ -1,224 +1,1 @@
-{
-  "openapi": "3.0.1",
-  "info": {
-    "title": "Musica API",
-    "license": {
-      "name": "Apache License 2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0"
-    },
-    "version": "v1"
-  },
-  "servers": [
-    {
-      "url": "http://localhost:8080",
-      "description": "Generated server url"
-    }
-  ],
-  "paths": {
-    "/api/v1/alterar/{id}": {
-      "put": {
-        "tags": [
-          "musica-controller"
-        ],
-        "description": "Método utilizado para alterar os dados de uma música",
-        "operationId": "alterar",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/MusicaDto"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Música Alterada",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/incluir": {
-      "post": {
-        "tags": [
-          "musica-controller"
-        ],
-        "description": "Método utilizado para realizar a inclusão de uma música",
-        "operationId": "incluir",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/MusicaDto"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Música Incluída",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/listar": {
-      "get": {
-        "tags": [
-          "musica-controller"
-        ],
-        "description": "Listagem Geral",
-        "operationId": "listAll",
-        "responses": {
-          "200": {
-            "description": "Listagem geral",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/getbyID/{id}": {
-      "get": {
-        "tags": [
-          "musica-controller"
-        ],
-        "description": "Método utilizado para buscar uma música pelo id informado",
-        "operationId": "buscarPorId",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Buscar música",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/favoritar/{id}": {
-      "get": {
-        "tags": [
-          "musica-controller"
-        ],
-        "description": "Método utilizado para favoritar uma música pelo id informado",
-        "operationId": "favoritarMusica",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Favoritar música",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/excluir/{id}": {
-      "delete": {
-        "tags": [
-          "musica-controller"
-        ],
-        "description": "Método utilizado para remover uma música pelo id informado",
-        "operationId": "excluir",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Música Removida",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "MusicaDto": {
-        "type": "object",
-        "properties": {
-          "nomeBanda": {
-            "type": "string"
-          },
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "nomeMusica": {
-            "type": "string"
-          },
-          "nomeAlbum": {
-            "type": "string"
-          },
-          "dataLancamento": {
-            "type": "string",
-            "format": "date"
-          },
-          "duracao": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "favorito": {
-            "type": "boolean"
-          }
-        }
-      }
-    },
-    "securitySchemes": {
-      "basicScheme": {
-        "type": "http",
-        "scheme": "basic"
-      }
-    }
-  }
-}
+{"openapi":"3.0.1","info":{"title":"Musica API","license":{"name":"Apache License 2.0","url":"http://www.apache.org/licenses/LICENSE-2.0"},"version":"v1"},"servers":[{"url":"http://localhost:8080","description":"Generated server url"}],"paths":{"/api/v1/musica/alterar/{id}":{"put":{"tags":["musica-controller"],"description":"Método utilizado para alterar os dados de uma música","operationId":"alterar","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/MusicaDto"}}},"required":true},"responses":{"200":{"description":"Música Alterada","content":{"application/json":{}}}}}},"/api/v1/genero/alterar/{id}":{"put":{"tags":["genero-controller"],"description":"Método utilizado para alterar os dados de um genero","operationId":"alterar_1","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/GeneroDto"}}},"required":true},"responses":{"200":{"description":"Genero Alterada","content":{"application/json":{}}}}}},"/api/v1/usuarios/incluir":{"post":{"tags":["usuario-controller"],"description":"Método utilizado para realizar a inclusão de um genero","operationId":"incluir","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/UsuarioDto"}}},"required":true},"responses":{"200":{"description":"Genero Incluído","content":{"application/json":{}}}}}},"/api/v1/musica/incluir":{"post":{"tags":["musica-controller"],"description":"Método utilizado para realizar a inclusão de uma música","operationId":"incluir_1","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/MusicaDto"}}},"required":true},"responses":{"200":{"description":"Música Incluída","content":{"application/json":{}}}}}},"/api/v1/genero/incluir":{"post":{"tags":["genero-controller"],"description":"Método utilizado para realizar a inclusão de um genero","operationId":"incluir_2","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/GeneroDto"}}},"required":true},"responses":{"200":{"description":"Genero Incluído","content":{"application/json":{}}}}}},"/api/v1/musica/listar":{"get":{"tags":["musica-controller"],"description":"Listagem Geral","operationId":"listAll","responses":{"200":{"description":"Listagem geral","content":{"application/json":{}}}}}},"/api/v1/musica/listar favoritas":{"get":{"tags":["musica-controller"],"description":"Listagem Favoritas","operationId":"listarfavoritas","responses":{"200":{"description":"Listagem favoritas","content":{"application/json":{}}}}}},"/api/v1/musica/getbyID/{id}":{"get":{"tags":["musica-controller"],"description":"Método utilizado para buscar uma música pelo id informado","operationId":"buscarPorId","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"Buscar música","content":{"application/json":{}}}}}},"/api/v1/musica/favoritar/{id}":{"get":{"tags":["musica-controller"],"description":"Método utilizado para favoritar uma música pelo id informado","operationId":"favoritarMusica","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"Favoritar música","content":{"application/json":{}}}}}},"/api/v1/genero/listar":{"get":{"tags":["genero-controller"],"description":"Listagem Geral","operationId":"listAll_1","responses":{"200":{"description":"Listagem geral","content":{"application/json":{}}}}}},"/api/v1/genero/getbyID/{id}":{"get":{"tags":["genero-controller"],"description":"Método utilizado para buscar um genero pelo id informado","operationId":"buscarPorId_1","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"Buscar genero","content":{"application/json":{}}}}}},"/api/v1/musica/excluir/{id}":{"delete":{"tags":["musica-controller"],"description":"Método utilizado para remover uma música pelo id informado","operationId":"excluir","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"Música Removida","content":{"application/json":{}}}}}},"/api/v1/genero/excluir/{id}":{"delete":{"tags":["genero-controller"],"description":"Método utilizado para remover um genero pelo id informado","operationId":"excluir_1","parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"integer","format":"int64"}}],"responses":{"200":{"description":"Genero Removida","content":{"application/json":{}}}}}}},"components":{"schemas":{"GeneroDto":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"nome":{"type":"string"},"musicas":{"type":"array","items":{"$ref":"#/components/schemas/MusicaDto"}}}},"MusicaDto":{"type":"object","properties":{"nomeBanda":{"type":"string"},"id":{"type":"integer","format":"int64"},"nomeMusica":{"type":"string"},"nomeAlbum":{"type":"string"},"dataLancamento":{"type":"string","format":"date"},"duracao":{"type":"integer","format":"int64"},"favorito":{"type":"boolean"},"genero":{"$ref":"#/components/schemas/GeneroDto"}}},"UsuarioDto":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"email":{"type":"string"},"login":{"type":"string"},"senha":{"type":"string"},"nome":{"type":"string"},"funcionalidades":{"uniqueItems":true,"type":"array","items":{"$ref":"#/components/schemas/UsuarioFuncionalidadeDto"}}}},"UsuarioFuncionalidadeDto":{"type":"object"}},"securitySchemes":{"basicScheme":{"type":"http","scheme":"basic"}}}}
