# src/app/api/models/genero-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { MusicaDto } from './musica-dto';
+export interface GeneroDto {
+  id?: number;
+  musicas?: Array<MusicaDto>;
+  nome?: string;
+}
