# src/app/app.module.ts
@@ -6,12 +6,12 @@ import { AppComponent } from './app.component';
 import { HomeComponent } from './pages/home/home.component';
 import {MatTabsModule} from '@angular/material/tabs';
 import {BrowserAnimationsModule} from "@angular/platform-browser/animations";
-import {HttpClientModule} from '@angular/common/http';
-import { ListaComponent } from './pages/lista/lista.component';
+import {HTTP_INTERCEPTORS, HttpClientModule} from '@angular/common/http';
+import { ListaComponent } from './pages/musica/lista/lista.component';
 import {ApiModule} from "./api/api.module";
 import {MatTableModule} from "@angular/material/table";
 import {MatPaginatorModule} from "@angular/material/paginator";
-import { IncluirComponent } from './pages/incluir/incluir.component';
+import { IncluirComponent } from './pages/musica/incluir/incluir.component';
 import {MAT_FORM_FIELD_DEFAULT_OPTIONS, MatFormFieldModule} from "@angular/material/form-field";
 import {MatSelectModule} from "@angular/material/select";
 import {MatInputModule} from "@angular/material/input";
@@ -23,6 +23,7 @@ import {MusicaModule} from "./pages/musica.module";
 import {MatSidenavModule} from "@angular/material/sidenav";
 import {MatToolbarModule} from "@angular/material/toolbar";
 import {MatButtonModule} from "@angular/material/button";
+import {GeneroModule} from "./pages/genero/genero.module";
 
 
 @NgModule({
@@ -48,10 +49,12 @@ import {MatButtonModule} from "@angular/material/button";
     MatButtonModule,
     MatIconModule,
     MusicaModule,
+    GeneroModule,
     MatSidenavModule,
     MatToolbarModule
   ],
-  providers: [{provide: MAT_FORM_FIELD_DEFAULT_OPTIONS, useValue: {appearance: 'outline'}},
+  providers: [
+    {provide: MAT_FORM_FIELD_DEFAULT_OPTIONS, useValue: {appearance: 'outline'}},
   ],
   bootstrap: [AppComponent]
 })
